<resources>
    <string name="app_name">Qsale</string>
    <string name="login_action_label">Log in</string>
    <string name="add_item_action_label">Add</string>
    <string name="clear_checked_action_label">Clear Checked</string>
    <string name="clear_all_action_label">Clear All</string>
    <string name="edit_item_hint">Edit Item</string>
    <string name="new_item">New Item</string>
    <string name="store_name">Store Name</string>
    <string name="store_location">Store Location</string>
    <string name="item_description">Item Description</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="original_price">Original Price</string>
    <string name="sale_price">Sale Price</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="available_items">Available Items</string>
    <string name="submit">Submit</string>
    <string name="stitch_client_app_id">qsale-mxakd</string>
    <string name="google_web_client_id">247554997227-aau0iuh1hc8t48v08j4nafm56qoc2otl.apps.googleusercontent.com</string>
</resources>
